goal/target-maven/generated-sources/antlr4/Bpmn2Parser.java
// Generated from Bpmn2.g4 by ANTLR 4.9.3
 package org.vnu.sme.goal.bpmn2.parser; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Bpmn2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, IDENT=42, STRING=43, STATE_CLAUSE=44, WS=45, 
		LINE_COMMENT=46, BLOCK_COMMENT=47;
	public static final int
		RULE_model = 0, RULE_pool = 1, RULE_laneDecl = 2, RULE_topElement = 3, 
		RULE_eventDecl = 4, RULE_eventTypeProperty = 5, RULE_eventKind = 6, RULE_activityDecl = 7, 
		RULE_activityTypeProperty = 8, RULE_activityType = 9, RULE_gatewayDecl = 10, 
		RULE_gatewayTypeProperty = 11, RULE_gatewayFlow = 12, RULE_gatewayFlowCondition = 13, 
		RULE_laneProperty = 14, RULE_flowProperty = 15, RULE_message = 16, RULE_messageFlow = 17, 
		RULE_nameProperty = 18, RULE_triggerProperty = 19, RULE_directionProperty = 20, 
		RULE_messageProperty = 21, RULE_preProperty = 22, RULE_postProperty = 23, 
		RULE_effectProperty = 24, RULE_stateClause = 25, RULE_eventType = 26, 
		RULE_eventDir = 27, RULE_gwType = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"model", "pool", "laneDecl", "topElement", "eventDecl", "eventTypeProperty", 
			"eventKind", "activityDecl", "activityTypeProperty", "activityType", 
			"gatewayDecl", "gatewayTypeProperty", "gatewayFlow", "gatewayFlowCondition", 
			"laneProperty", "flowProperty", "message", "messageFlow", "nameProperty", 
			"triggerProperty", "directionProperty", "messageProperty", "preProperty", 
			"postProperty", "effectProperty", "stateClause", "eventType", "eventDir", 
			"gwType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'model'", "'{'", "'}'", "'pool'", "'lane'", "';'", "'event'", 
			"'type'", "'start'", "'end'", "'intermediate'", "'activity'", "'task'", 
			"'call-activity'", "'subprocess'", "'gateway'", "'flow'", "'when'", "'default'", 
			"'message'", "'message-flow'", "'->'", "'name'", "'trigger'", "'direction'", 
			"'pre'", "'post'", "'effect'", "'none'", "'timer'", "'error'", "'signal'", 
			"'terminate'", "'compensation'", "'conditional'", "'catching'", "'throwing'", 
			"'xor'", "'and'", "'or'", "'event-based'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "IDENT", "STRING", "STATE_CLAUSE", 
			"WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Bpmn2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Bpmn2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ModelContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(Bpmn2Parser.IDENT, 0); }
		public TerminalNode EOF() { return getToken(Bpmn2Parser.EOF, 0); }
		public List<PoolContext> pool() {
			return getRuleContexts(PoolContext.class);
		}
		public PoolContext pool(int i) {
			return getRuleContext(PoolContext.class,i);
		}
		public List<MessageContext> message() {
			return getRuleContexts(MessageContext.class);
		}
		public MessageContext message(int i) {
			return getRuleContext(MessageContext.class,i);
		}
		public List<MessageFlowContext> messageFlow() {
			return getRuleContexts(MessageFlowContext.class);
		}
		public MessageFlowContext messageFlow(int i) {
			return getRuleContext(MessageFlowContext.class,i);
		}
		public List<TopElementContext> topElement() {
			return getRuleContexts(TopElementContext.class);
		}
		public TopElementContext topElement(int i) {
			return getRuleContext(TopElementContext.class,i);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).enterModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).exitModel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bpmn2Visitor ) return ((Bpmn2Visitor<? extends T>)visitor).visitModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__0);
			setState(59);
			match(IDENT);
			setState(60);
			match(T__1);
			setState(62); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(61);
				pool();
				}
				}
				setState(64); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__3 );
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__19) {
				{
				{
				setState(66);
				message();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__20) {
				{
				{
				setState(72);
				messageFlow();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__11) | (1L << T__15))) != 0)) {
				{
				{
				setState(78);
				topElement();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			match(T__2);
			setState(85);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PoolContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(Bpmn2Parser.IDENT, 0); }
		public NamePropertyContext nameProperty() {
			return getRuleContext(NamePropertyContext.class,0);
		}
		public List<LaneDeclContext> laneDecl() {
			return getRuleContexts(LaneDeclContext.class);
		}
		public LaneDeclContext laneDecl(int i) {
			return getRuleContext(LaneDeclContext.class,i);
		}
		public PoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).enterPool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).exitPool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bpmn2Visitor ) return ((Bpmn2Visitor<? extends T>)visitor).visitPool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PoolContext pool() throws RecognitionException {
		PoolContext _localctx = new PoolContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pool);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__3);
			setState(88);
			match(IDENT);
			setState(89);
			match(T__1);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__22) {
				{
				setState(90);
				nameProperty();
				}
			}

			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(93);
				laneDecl();
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LaneDeclContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(Bpmn2Parser.IDENT, 0); }
		public LaneDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_laneDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).enterLaneDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).exitLaneDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bpmn2Visitor ) return ((Bpmn2Visitor<? extends T>)visitor).visitLaneDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LaneDeclContext laneDecl() throws RecognitionException {
		LaneDeclContext _localctx = new LaneDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_laneDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(T__4);
			setState(102);
			match(IDENT);
			setState(103);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopElementContext extends ParserRuleContext {
		public EventDeclContext eventDecl() {
			return getRuleContext(EventDeclContext.class,0);
		}
		public ActivityDeclContext activityDecl() {
			return getRuleContext(ActivityDeclContext.class,0);
		}
		public GatewayDeclContext gatewayDecl() {
			return getRuleContext(GatewayDeclContext.class,0);
		}
		public TopElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).enterTopElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).exitTopElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bpmn2Visitor ) return ((Bpmn2Visitor<? extends T>)visitor).visitTopElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopElementContext topElement() throws RecognitionException {
		TopElementContext _localctx = new TopElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_topElement);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				eventDecl();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				activityDecl();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 3);
				{
				setState(107);
				gatewayDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventDeclContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(Bpmn2Parser.IDENT, 0); }
		public EventTypePropertyContext eventTypeProperty() {
			return getRuleContext(EventTypePropertyContext.class,0);
		}
		public LanePropertyContext laneProperty() {
			return getRuleContext(LanePropertyContext.class,0);
		}
		public TriggerPropertyContext triggerProperty() {
			return getRuleContext(TriggerPropertyContext.class,0);
		}
		public DirectionPropertyContext directionProperty() {
			return getRuleContext(DirectionPropertyContext.class,0);
		}
		public FlowPropertyContext flowProperty() {
			return getRuleContext(FlowPropertyContext.class,0);
		}
		public EventDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).enterEventDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).exitEventDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bpmn2Visitor ) return ((Bpmn2Visitor<? extends T>)visitor).visitEventDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventDeclContext eventDecl() throws RecognitionException {
		EventDeclContext _localctx = new EventDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_eventDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(T__6);
			setState(111);
			match(IDENT);
			setState(112);
			match(T__1);
			setState(113);
			eventTypeProperty();
			setState(114);
			laneProperty();
			setState(115);
			triggerProperty();
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__24) {
				{
				setState(116);
				directionProperty();
				}
			}

			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(119);
				flowProperty();
				}
			}

			setState(122);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventTypePropertyContext extends ParserRuleContext {
		public EventKindContext eventKind() {
			return getRuleContext(EventKindContext.class,0);
		}
		public EventTypePropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventTypeProperty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).enterEventTypeProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).exitEventTypeProperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bpmn2Visitor ) return ((Bpmn2Visitor<? extends T>)visitor).visitEventTypeProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventTypePropertyContext eventTypeProperty() throws RecognitionException {
		EventTypePropertyContext _localctx = new EventTypePropertyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_eventTypeProperty);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(T__7);
			setState(125);
			eventKind();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventKindContext extends ParserRuleContext {
		public EventKindContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventKind; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).enterEventKind(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).exitEventKind(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bpmn2Visitor ) return ((Bpmn2Visitor<? extends T>)visitor).visitEventKind(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventKindContext eventKind() throws RecognitionException {
		EventKindContext _localctx = new EventKindContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_eventKind);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActivityDeclContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(Bpmn2Parser.IDENT, 0); }
		public ActivityTypePropertyContext activityTypeProperty() {
			return getRuleContext(ActivityTypePropertyContext.class,0);
		}
		public LanePropertyContext laneProperty() {
			return getRuleContext(LanePropertyContext.class,0);
		}
		public NamePropertyContext nameProperty() {
			return getRuleContext(NamePropertyContext.class,0);
		}
		public PrePropertyContext preProperty() {
			return getRuleContext(PrePropertyContext.class,0);
		}
		public EffectPropertyContext effectProperty() {
			return getRuleContext(EffectPropertyContext.class,0);
		}
		public PostPropertyContext postProperty() {
			return getRuleContext(PostPropertyContext.class,0);
		}
		public FlowPropertyContext flowProperty() {
			return getRuleContext(FlowPropertyContext.class,0);
		}
		public ActivityDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_activityDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).enterActivityDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).exitActivityDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bpmn2Visitor ) return ((Bpmn2Visitor<? extends T>)visitor).visitActivityDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActivityDeclContext activityDecl() throws RecognitionException {
		ActivityDeclContext _localctx = new ActivityDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_activityDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(T__11);
			setState(130);
			match(IDENT);
			setState(131);
			match(T__1);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__22) {
				{
				setState(132);
				nameProperty();
				}
			}

			setState(135);
			activityTypeProperty();
			setState(136);
			laneProperty();
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__25) {
				{
				setState(137);
				preProperty();
				}
			}

			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__27) {
				{
				setState(140);
				effectProperty();
				}
			}

			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__26) {
				{
				setState(143);
				postProperty();
				}
			}

			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(146);
				flowProperty();
				}
			}

			setState(149);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActivityTypePropertyContext extends ParserRuleContext {
		public ActivityTypeContext activityType() {
			return getRuleContext(ActivityTypeContext.class,0);
		}
		public ActivityTypePropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_activityTypeProperty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).enterActivityTypeProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).exitActivityTypeProperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bpmn2Visitor ) return ((Bpmn2Visitor<? extends T>)visitor).visitActivityTypeProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActivityTypePropertyContext activityTypeProperty() throws RecognitionException {
		ActivityTypePropertyContext _localctx = new ActivityTypePropertyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_activityTypeProperty);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(T__7);
			setState(152);
			activityType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActivityTypeContext extends ParserRuleContext {
		public ActivityTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_activityType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).enterActivityType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).exitActivityType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bpmn2Visitor ) return ((Bpmn2Visitor<? extends T>)visitor).visitActivityType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActivityTypeContext activityType() throws RecognitionException {
		ActivityTypeContext _localctx = new ActivityTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_activityType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__12) | (1L << T__13) | (1L << T__14))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GatewayDeclContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(Bpmn2Parser.IDENT, 0); }
		public LanePropertyContext laneProperty() {
			return getRuleContext(LanePropertyContext.class,0);
		}
		public GatewayTypePropertyContext gatewayTypeProperty() {
			return getRuleContext(GatewayTypePropertyContext.class,0);
		}
		public PrePropertyContext preProperty() {
			return getRuleContext(PrePropertyContext.class,0);
		}
		public List<GatewayFlowContext> gatewayFlow() {
			return getRuleContexts(GatewayFlowContext.class);
		}
		public GatewayFlowContext gatewayFlow(int i) {
			return getRuleContext(GatewayFlowContext.class,i);
		}
		public GatewayDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gatewayDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).enterGatewayDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bpmn2Listener ) ((Bpmn2Listener)listener).exitGatewayDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bpmn2Visitor ) return ((Bpmn2Visitor<? extends T>)visitor).visitGatewayDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GatewayDeclContext gatewayDecl() throws RecognitionException {
		GatewayDeclContext _localctx = new GatewayDeclContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_gatewayDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(T__15);
			setState(157);
			match(IDENT);
			setState(158);
			match(T__1);
			setState(159);
			laneProperty();
			setState(160);
			gatewayTypeProperty();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__25) {
				{
				setState(161);
				preProperty();
				}
			}

			setState(165); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(164);
				gatewayFlow();
				}
				}
				setState(167); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__16 );
			setState(169);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
